Added Contents Buttons to Reviews
Added Table of Contents buttons to Reviews page for easier navigation within the page, especially on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,9 @@ th {
 label {
   display: inline-block;
 }
-
+.reviews-button {
+  width: 100%;
+}
 #backToTopButton {
   position:fixed; /*Fixed Sticky position*/
   bottom: 20px; /* Place the button at the bottom of the page */
