Added Professional Projects
Added a section called Professional Projects to the Projects page. Fixed issues with <h> tags and tweaked the styling a bit for easier reading.

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,7 @@ h2, .h2 {
 
 h3, .h3 {
   font-size: calc(1.3rem + 0.6vw);
+  padding-top: 1.25rem;
 }
 @media (min-width: 1200px) {
   h3, .h3 {
